# Mnemosyne

./: .cursorrules  .gitignore  CLAUDE.md  CURSOR_INTEGRATION.md  LICENSE  NEO4J_INTEGRATION.md  PHASE3_SUMMARY.md  README.md  __init__.py  auto_conversation_logger.py  chromadb_export_20250918_183123.json  chromadb_export_20250928_042406.json  chromadb_export_20251003_221454.json  chromadb_export_20251004_225025.json  cli.py  config.py  config.yaml  explore_db.py  hello_world.py  neo4j_export_20250918_183123.json  neo4j_export_20250928_042406.json  performance_config.py  pyproject.toml  requirements.txt  server.py  setup.py  simple_logger.py  test_auto_recording.py  test_storage.py
context/: __init__.py  compressor.py  relevance.py  session_database.py  session_tracker.py  smart_injector.py  summarizer.py
docs/: CONTEXT_EFFICIENCY_DEMO.md  INSTALLATION.md  SMART_CONTEXT_IMPROVEMENTS.md
memory/: __init__.py  auto_trigger.py  embeddings.py  extractor.py  graph.py  models.py  storage.py
tests/: test_cursor_integration.py  test_minimal_mcp.py  test_neo4j.py  test_phase3.py  test_server.py
tools/: __init__.py  file_tools.py  graph_tools.py  retrieval_tools.py  store_tools.py
